bump java/SB/model